force-app/main/default/objects/SurveyFlyoutConfig__mdt/SurveyFlyoutConfig__mdt.object-meta.xml
<CustomObject>
    <label>SurveyFlyoutConfig</label>
    <pluralLabel>SurveyFlyoutConfig</pluralLabel>
</CustomObject>