force-app/main/default/objects/SurveyFlyoutConfig__mdt/fields/Bootstrap_Link__c.field-meta.xml
<CustomField>
    <fullName>Bootstrap_Link__c</fullName>
    <label>Bootstrap Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>