force-app/main/default/objects/SurveyFlyoutConfig__mdt/fields/ESA_Deployment_Link__c.field-meta.xml
<CustomField>
    <fullName>ESA_Deployment_Link__c</fullName>
    <label>ESA Deployment Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>