force-app/main/default/objects/SurveyFlyoutConfig__mdt/fields/Recall_Product_Table_Name__c.field-meta.xml
<CustomField>
    <fullName>Recall_Product_Table_Name__c</fullName>
    <label>Recall Product Table Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>