force-app/main/default/objects/SurveyFlyoutConfig__mdt/fields/returnLabelVFPageUrl__c.field-meta.xml
<CustomField>
    <fullName>returnLabelVFPageUrl__c</fullName>
    <label>returnLabelVFPageUrl</label>
    <type>Url</type>
</CustomField>