force-app/main/default/objects/SurveyFlyoutConfig__mdt/fields/Segment_Name__c.field-meta.xml
<CustomField>
    <fullName>Segment_Name__c</fullName>
    <label>Segment Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>