force-app/main/default/objects/SurveyFlyoutConfig__mdt/fields/SiteURL__c.field-meta.xml
<CustomField>
    <fullName>SiteURL__c</fullName>
    <label>SiteURL</label>
    <type>Url</type>
</CustomField>