force-app/main/default/objects/SurveyFlyoutConfig__mdt/fields/Srct_Url__c.field-meta.xml
<CustomField>
    <fullName>Srct_Url__c</fullName>
    <label>Srct Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>